--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"ignore": []
+		"ignore": ["**/*.js", "./.next/**/*"]
 	},
 	"formatter": {
 		"enabled": true,
